fixed spacing on the product page

--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -46,6 +46,7 @@ body {
     width: 100vw;
     align-items: center;
     justify-content: center;
+    padding: 10px;
 }
 .product-list {
     display: flex;
@@ -159,6 +160,7 @@ body {
     justify-content: center;
     width: 650px;
     font-size: 19px;
+    gap: 12px;
 }
 .cart{
     color: white;
